@@ -1,3 +1,15 @@
+2008-11-24  Gavin Barraclough  <barraclough@apple.com>
+
+        Rubber stamped by Mark Rowe.
+
+        Add test cases to ensure the PIC trampolines for prototype and prototype chain
+        accesses properly check for JSImmediate values, rather than segfaulting.
+
+        https://bugs.webkit.org/show_bug.cgi?id=22451
+
+        * fast/js/pic/cached-prototype-then-immediate-expected.txt: Added.
+        * fast/js/pic/cached-prototype-then-immediate.html: Added.
+
 2008-11-21  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Geoff Garen.
